--- a/Multiverse-Core/worlds.yml
+++ b/Multiverse-Core/worlds.yml
@@ -2483,11 +2483,11 @@ worlds:
     keepSpawnInMemory: 'true'
     spawnLocation:
       ==: MVSpawnLocation
-      x: 3.5
+      x: 7.5
       y: 39.0
-      z: 25.5
-      pitch: -3.026993
-      yaw: -233.18494
+      z: 26.5
+      pitch: 1.7492608
+      yaw: -180.70142
     autoLoad: 'true'
     bedRespawn: 'true'
     worldBlacklist: []
