--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -13166,8 +13166,7 @@ users:
         - essentials.gamemode
         - essentials.fly
       fightclub:
-        permissions:
-        - essentials.build.*
+        permissions: []
     permissions:
     - multiverse.access.fightclub
     - is.secretary
@@ -15953,7 +15952,7 @@ users:
       name: Greninja25
   8985f847-87f0-4d98-868e-e7a56f168697:
     group:
-    - starfire
+    - mosquitogirl
     options:
       name: Gamer_Jesse
   0162c2a3-5058-4f6f-8ca9-f0063a7d1fab:
@@ -16278,9 +16277,12 @@ users:
       name: NoFearKing
   d39ddc52-5fdb-484e-8e0c-f538e7982bee:
     group:
-    - thepresence
+    - terra
     options:
       name: Eyemakid
+    worlds:
+      fightclub:
+        permissions: []
   b23253de-b89d-4ea4-8f9d-f8eaee9e2c37:
     group:
     - redlanternatrocitus
@@ -16461,11 +16463,13 @@ users:
       name: Jqnitor
   84fd8845-7603-437f-b271-5ef0cfaae41a:
     group:
-    - starfire
+    - darthvader
     options:
       name: BossSlasher
     worlds:
       greenfield:
+        permissions: []
+      fightclub:
         permissions: []
   401d470d-f4b0-4da7-be80-7d2f75cc687d:
     group:
@@ -16877,7 +16881,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - kenkaneki
+    - parallaxentity
     options:
       name: HerpaDerp10000
     permissions:
@@ -17316,7 +17320,7 @@ users:
       name: Son_Daiko
   0e20268d-ad1a-4a5a-b867-1bd57a24468f:
     group:
-    - superboykalel
+    - goku
     options:
       name: Destro717
     worlds:
@@ -17324,15 +17328,30 @@ users:
         permissions: []
   8e947705-440e-4b30-a05c-010e4da817a4:
     group:
-    - deathstroke
+    - killerfrostcaitlinsnow
     worlds:
       greenfield:
         permissions: []
+    options:
+      name: WeirdoBobby
   14ef9fd7-140a-4669-b2bf-74a47673db47:
     group:
     - snoopdogg
     options:
       name: DerpIndustries
+  b2b36588-6097-4489-b27d-16904b55ec34:
+    group:
+    - spidermanpeterparker
+    options:
+      name: Grizwald200
+    worlds:
+      greenfield:
+        permissions: []
+  ccedce4e-6f6f-4696-8210-79e9225552e1:
+    group:
+    - zatanna
+    options:
+      name: SacabooCDE
 worlds:
   checkers:
     inheritance:
