--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,23 +1,25 @@
-storage: {_WonderBat_spouse: '"Eobard765Man"', LostInGalaxeh_fightClubWins: '4', Mamby101fightClubWins: '0',
-  xDcGamerfightClubLosses: '4', testID3: '0', ImOnePunchManfightClubWins: '1', testID1: '9',
-  topmiddle3: '1', testID2: '7', topmiddle2: '1', DemonWolf_fightClubLosses: '8',
-  bottomright3: '1', topmiddle1: '7', SS_HarleyQuinnfightClubWins: '1', bottomright1: '4',
-  bottomright2: '8', bottomleft2: '1', bottomleft3: '2', TooFluffyfightClubWins: '28',
+storage: {_WonderBat_spouse: '"Eobard765Man"', Eobard765ManfightClubLosses: '2', LostInGalaxeh_fightClubWins: '4',
+  Mamby101fightClubWins: '0', xDcGamerfightClubLosses: '4', testID3: '0', ImOnePunchManfightClubWins: '1',
+  _WonderBat_fightClubWins: '1', testID1: '9', topmiddle3: '0', testID2: '7', topmiddle2: '2',
+  DemonWolf_fightClubLosses: '8', bottomright3: '0', topmiddle1: '9', SS_HarleyQuinnfightClubWins: '1',
+  HerpaDerp10000fightClubWins: '1', bottomright1: '5', bottomright2: '2', bottomleft2: '6',
+  BossSlasherfightClubLosses: '1', bottomleft3: '1', TooFluffyfightClubWins: '28',
   FunCaptianrexfightClubLosses: '2', lissakittyfightClubLosses: '0', CorruptRacerfightClubWins: '1',
-  LostInGalaxeh_spouse: '"Camulll"', God_Doesnt_ExistfightClubLosses: '8', God_Doesnt_ExistfightClubWins: '2',
-  LordOfGallifreyfightClubLosses: '1', DemonWolf_fightClubWins: '3', bottommiddle1: '3',
+  LostInGalaxeh_spouse: '"Camulll"', God_Doesnt_ExistfightClubLosses: '11', God_Doesnt_ExistfightClubWins: '3',
+  LordOfGallifreyfightClubLosses: '1', DemonWolf_fightClubWins: '3', bottommiddle1: '7',
   bottommiddle2: '9', mythguy1226spouse: '""', CorruptRacerfightClubLosses: '4', bottommiddle3: '0',
   westmachine1: '6', westmachine3: '6', Camulllspouse: '"xDcGamer"', westmachine2: '6',
-  mythguy1226fightClubLosses: '6', SirRicardospouse: '"Camulll"', ImOnePunchManfightClubLosses: '1',
-  Wolfie35fightClubLosses: '2', Mamby101fightClubLosses: '0', topleft1: '2', topleft2: '7',
-  Predamorph1519spouse: '"Camulll"', topleft3: '0', nullspouse: '""', lissakittyspouse: '"God_Doesnt_Exist"',
-  BrainyRulerfightClubWins: '1', mythguy1226fightClubWins: '18', nightghost2spouse: '"SS_HarleyQuinn"',
-  CamulllfightClubLosses: '1', bottomleft1: '9', nightghost2fightClubWins: '3', nightghost2fightClubLosses: '12',
+  mythguy1226fightClubLosses: '8', Eobard765ManfightClubWins: '4', SirRicardospouse: '"Camulll"',
+  ImOnePunchManfightClubLosses: '1', Wolfie35fightClubLosses: '2', Mamby101fightClubLosses: '0',
+  topleft1: '7', BossSlasherfightClubWins: '2', topleft2: '3', Predamorph1519spouse: '"Camulll"',
+  topleft3: '1', EyemakidfightClubWins: '2', nullspouse: '""', lissakittyspouse: '"God_Doesnt_Exist"',
+  BrainyRulerfightClubWins: '1', mythguy1226fightClubWins: '19', nightghost2spouse: '"SS_HarleyQuinn"',
+  CamulllfightClubLosses: '1', bottomleft1: '9', nightghost2fightClubWins: '3', nightghost2fightClubLosses: '13',
   xDcGamerfightClubWins: '7', Like_A_Boss382spouse: '"Camulll"', TooFluffyfightClubLosses: '6',
   Honeybazz118fightClubWins: '1', ThatCraftLifespouse: '"Camulll"', southmachine1: '6',
   SS_HarleyQuinnfightClubLosses: '3', northmachine2: '4', northmachine3: '5', BrainyRulerfightClubLosses: '2',
   SS_HarleyQuinnspouse: '"nightghost2"', lissakittyfightClubWins: '0', southmachine3: '4',
-  xDcGamerspouse: '"Camulll"', southmachine2: '3', HerpaDerp10000fightClubLosses: '3',
+  xDcGamerspouse: '"Camulll"', southmachine2: '3', HerpaDerp10000fightClubLosses: '4',
   Honeybazz118fightClubLosses: '3', LostInGalaxeh_fightClubLosses: '4', eastmachine1: '2',
-  topright3: '0', topright2: '7', topright1: '2', EmmettGamingspouse: '"SirRicardo"',
+  topright3: '1', topright2: '2', topright1: '0', EmmettGamingspouse: '"SirRicardo"',
   northmachine1: '5', eastmachine3: '2', eastmachine2: '3', God_Doesnt_Existspouse: '"lissakitty"'}
