--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10663,6 +10663,7 @@ users:
     options:
       name: Mamby101
     permissions:
+    - powers.onepunch
     - multiverse.access.fightclub
     group:
     - mortal
@@ -12279,6 +12280,7 @@ users:
     options:
       name: lissakitty
     permissions:
+    - powers.onepunch
     - is.married
     - multiverse.access.fightclub
     - essentials.back
@@ -12408,7 +12410,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - blackflash
+    - mortal
     options:
       name: nevsfam
     permissions: []
@@ -15952,9 +15954,12 @@ users:
       name: Greninja25
   8985f847-87f0-4d98-868e-e7a56f168697:
     group:
-    - mosquitogirl
+    - optimusprime
     options:
       name: Gamer_Jesse
+    worlds:
+      fightclub:
+        permissions: []
   0162c2a3-5058-4f6f-8ca9-f0063a7d1fab:
     group:
     - doctorstrange
@@ -17352,6 +17357,14 @@ users:
     - zatanna
     options:
       name: SacabooCDE
+  dccc293a-5cb1-45e8-a895-a6301ca2960e:
+    group:
+    - flashbarryallen
+    worlds:
+      fightclub:
+        permissions: []
+      greenfield:
+        permissions: []
 worlds:
   checkers:
     inheritance:
