--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11028,7 +11028,7 @@ users:
       name: noahdude60
   5bfa6299-b245-454e-a31c-22090f6fc812:
     group:
-    - mortal
+    - doctorstrange
     options:
       name: MZBgamer
   5c51f45c-2794-46ae-8c92-0f14c1b2ab91:
@@ -12410,7 +12410,7 @@ users:
       name: FlameZelus
   e17d8de4-9fa8-474a-a6c1-54d28c9a5591:
     group:
-    - mortal
+    - blackracerwilliewalker
     options:
       name: nevsfam
     permissions: []
@@ -17359,12 +17359,14 @@ users:
       name: SacabooCDE
   dccc293a-5cb1-45e8-a895-a6301ca2960e:
     group:
-    - flashbarryallen
+    - ichigokurosaki
     worlds:
       fightclub:
         permissions: []
       greenfield:
         permissions: []
+    options:
+      name: aldrin524
 worlds:
   checkers:
     inheritance:
