--- a/Magic/wands/elderwand.yml
+++ b/Magic/wands/elderwand.yml
@@ -1,5 +1,5 @@
 elderwand: 
-   active_spell: kill 
+   active_spell: disarm 
    mana: 600.0 
    effect_color: 274d74a0f611,5d8c5d622d3f,d775451acad6 
    page: 0 
@@ -17,7 +17,6 @@ elderwand:
    - reflect|4 
    - blink|6 
    - heal 
-   - kill
    - boom|3
    - blind
    - counterspell
@@ -32,8 +31,7 @@ elderwand:
      petrify: 0 
      blink: 31 
      fling: 7 
-     disarm: 33 
-     kill: 2 
+     disarm: 2  
      push: 1 
      pull: 4 
      torture: 3 
