--- a/Essentials/warps/desk.yml
+++ b/Essentials/warps/desk.yml
@@ -1,7 +1,7 @@
 world: office
-x: 9.5
-y: 104.0
-z: -7.5
-yaw: -0.21441427
-pitch: 2.0404813
+x: -3.670261320838597
+y: 137.0625
+z: -5.483393606782641
+yaw: -90.122375
+pitch: 1.4580772
 name: desk
