--- a/Magic/defaults/config.defaults.yml
+++ b/Magic/defaults/config.defaults.yml
@@ -231,6 +231,11 @@ offhand_cast_cooldown: 500
 # Which can cause some unintended effects like changing spells or brushes when a wand inventory is open.
 change_world_equip_cooldown: 1000
 
+# This can be used to fix compatibility with PerWorldInventory or other plugins that store players'
+# inventories on world change.
+# This makes sure wands close their inventory before players change worlds.
+close_wand_on_world_change: false
+
 # Turn this off to use normal damage. May be useful if you want
 # direct damage spells to effect armor.
 # This is incompatible with prevent_melee_damage: true!
@@ -294,6 +299,9 @@ sp_item_icon_url: http://textures.minecraft.net/texture/ce6ed0a5f7e23bc3d34d73ba
 
 # Cap SP- mainly so the UI doesn't get broken. 0 to disable and allow unlimited SP.
 sp_max: 9999
+
+# The amount of SP that new players start with
+sp_default: 0
 
 # This controls what players will see when interacting with an enchantment table
 enchant_click: spellshop
