--- a/Magic/defaults/items.defaults.yml
+++ b/Magic/defaults/items.defaults.yml
@@ -1450,9 +1450,9 @@ darkspiderspawner:
         MinSpawnDelay: 200
         MaxSpawnDelay: 500
         RequiredPlayerRange: 12
-        EntityId: CaveSpider
+        EntityId: cave_spider
         SpawnData:
-          id: CaveSpider
+          id: cave_spider
           CustomName: Dark Spider
                        
 megaspiderspawner:
@@ -1492,9 +1492,9 @@ cavespiderspawner:
         MinSpawnDelay: 200
         MaxSpawnDelay: 500
         RequiredPlayerRange: 12
-        EntityId: CaveSpider
+        EntityId: cave_spider
         SpawnData:
-          id: CaveSpider
+          id: cave_spider
              
 spiderspawner:
   worth: 20000.0
