--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -25,6 +25,37 @@ groups:
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
+    Kirito:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&0K&8i&7r&0i&8t&7o'
+      suffix: '&8'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.run5
+        - ch.alias.run6
+        - ch.alias.haste0
+        - ch.alias.haste1
+        - ch.alias.haste2
+        - ch.alias.haste3
+        - ch.alias.haste4
+        - ch.alias.haste5
+        - ch.alias.haste6
+        - ch.alias.haste7
+        - ch.alias.haste8
+        - ch.alias.haste9
   harrypotter:
     inheritance:
     - commonherotraits
