--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -25,7 +25,7 @@ groups:
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
-    Kirito:
+    kirito:
     inheritance:
     - commonherotraits
     options:
