--- a/Magic/messages.yml
+++ b/Magic/messages.yml
@@ -108,3 +108,13 @@ spells:
   stream:
     name: Aqua Eructo
     description: Spray a stream of water
+  forcepush:
+    name: Force Push
+    description: Use the force to push your enemies backwards
+  forcepull:
+    name: Force Pull
+    description: Pull enemies and items towards you
+  forcegrip:
+    name: Force Grip
+    description: Focus and let yourself levitate blocks and players
+    
