--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,33 @@
 groups:
+  yoda: 
+     inheritance: 
+     - commonherotraits 
+     options: 
+       prefix: '&2Y&ao&2d&aa' 
+       suffix: '&a' 
+     worlds: 
+       survival: 
+         permissions: 
+         - ch.alias.jump0
+         - ch.alias.jump1
+         - ch.alias.jump2
+         - ch.alias.jump3
+         - ch.alias.jump4
+         - ch.alias.jump5
+         - ch.alias.jump6
+         - ch.alias.jump7
+         - ch.alias.run0
+         - ch.alias.run1
+         - ch.alias.run2
+         - ch.alias.run3
+         - ch.alias.run4
+         - ch.alias.haste0
+         - ch.alias.haste1
+         - -magic.cast.spellshop
+         - magic.wand.use
+         - magic.cast
+         - magic.cast.*
+         - magic.use.yodaforce
   hippolytadc:
     inheritance:
     - commonherotraits
