--- a/Magic/wands/yodaforce.yml
+++ b/Magic/wands/yodaforce.yml
@@ -4,7 +4,7 @@ yodaforce:
    effect_color: 274d74a0f611,5d8c5d622d3f,d775451acad6 
    page: 0 
    spells: 
-   - forcepush 
+   - forcepush|4 
    - forcepull 
    - forcegrip  
    version: 5 
